update responsive website

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ markdown: kramdown
 #heme: minima
 plugins:
   - jekyll-feed
+  - jekyll-font-awesome-sass
+
+font-awesome:
+  assets: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
